--- a/contacts.html
+++ b/contacts.html
@@ -10,10 +10,10 @@
   <h1>Zoltan's Contact Details</h1>
   <h3>
     <ul>
-      <li><a href="mailto:zoltanbabo@yahoo.com">Send an email</a></li><br>
+      <li><a href="mailto:ZB@yahoo.com">Send an email</a></li><br>
       <li><a href="https://www.linkedin.com/in/zoltanbabo/" target="_blank">LinkedIn/zoltanbabo</a></li><br>
-      <li>Telephone/WhatsApp+31 616 110 240</li><br>
-      <li>Amsterdam / Netherlands</li><br>
+      <li>Telephone +31 091 309 320</li><br>
+      <li>The Randstad / Netherlands</li><br>
     </ul>
     <hr>
     <form action="mailto:zoltanbabo@yahoo.com" method="post" enctype="text/plain">
