--- a/contacts.html
+++ b/contacts.html
@@ -11,7 +11,7 @@
   <h3>
     <ul>
       <li><a href="mailto:ZB@yahoo.com">Send an email</a></li><br>
-      <li><a href="https://www.linkedin.com/in/zoltanbabo/" target="_blank">LinkedIn/zoltanbabo</a></li><br>
+      <li><a href="https://www.linkedin.com/in/zb1234/" target="_blank">LinkedIn/zoltanbabo</a></li><br>
       <li>Telephone +31 091 309 320</li><br>
       <li>The Randstad / Netherlands</li><br>
     </ul>
