--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
     </li>
     <br>
     <li><strong>Training content creation: </strong>SUt enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</li><br>
-    <li><strong>Collaboration: </strong>Proven track record, across multiple projects, to successfully bring internal and third-party stakeholders together to collaborate toward learning and development goals. While building the onboarding program, I
-      have successfully partnered and trained operations, sales, trainers, and marketing. The program has outperformed all other onboarding programs by 2019. Initiated and driven global cooperation, resulting in efficiency, improved communication,
-      and sharing resources.</li><br>
+    <li><strong>Collaboration: </strong>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</li><br>
     <li> <strong>Communication:</strong> Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? </li><br>
     <li> <strong>Structured thinking: </strong>Approaching projects pragmatically, to gather information and requirements, develop and test solutions, and execute post-analysis to further refine results. Driven by delivering practical and
       straightforward solutions to secure high user acceptance and satisfaction while focusing on business objectives, a win-win-win-win solution. </li>
