--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>★ Zoltan Babo ★</title>
-  <link rel="stylesheet" href="cv/css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
